squash supportedMoves bugs

--- a/src/components/game/board/boardMap/boardMap.scss
+++ b/src/components/game/board/boardMap/boardMap.scss
@@ -38,6 +38,7 @@
     }
   }
   & > path {
+    cursor: pointer;
     fill: transparent;
     overflow: hidden;
     position: relative;
